# tdi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  contribute.md
.github/workflows/: cmake.yml
cli/: CMakeLists.txt  cli_example.c  tdi_cli.c  tdi_cli.h
cli/xml/: startup.xml  tdi.xml
doc/: tdi-cli-user-guide.mdk  tdi-test.mdk
docs/: Doxyfile.in  DoxygenLayout.xml.in
docs/spec/: README.md  different format.md  references.bib  tdi-test.mdk
include/tdi/arch/pna/: pna_defs.h  pna_info.hpp  pna_init.hpp  pna_target.hpp
include/tdi/arch/psa/: psa_table_key.hpp
include/tdi/arch/psa/c_frontend/: psa_table_key.h
include/tdi/arch/tna/: tna_defs.h  tna_info.hpp  tna_init.hpp  tna_target.hpp
include/tdi/common/: tdi.hpp  tdi_attributes.hpp  tdi_defs.h  tdi_info.hpp  tdi_init.hpp  tdi_learn.hpp  tdi_notifications.hpp  tdi_operations.hpp  tdi_session.hpp  tdi_table.hpp  tdi_table_data.hpp  tdi_table_info.hpp  tdi_table_key.hpp  tdi_target.hpp  tdi_utils.hpp
include/tdi/common/c_frontend/: tdi_attributes.h  tdi_common.h  tdi_info.h  tdi_init.h  tdi_learn.h  tdi_notifications.h  tdi_operations.h  tdi_session.h  tdi_table.h  tdi_table_attributes.h  tdi_table_data.h  tdi_table_info.h  tdi_table_key.h  tdi_table_operations.h
include/tdi/common/tdi_json_parser/: tdi_cjson.hpp  tdi_info_parser.hpp  tdi_learn_info.hpp  tdi_table_info.hpp
schema/: tdi_schema.py
src/: CMakeLists.txt  tdi_cjson.cpp  tdi_info.cpp  tdi_init.cpp  tdi_learn.cpp  tdi_table.cpp  tdi_table_data.cpp  tdi_table_info.cpp  tdi_table_key.cpp  tdi_target.cpp  tdi_utils.cpp  tdi_utils.hpp
src/arch/pna/: CMakeLists.txt  pna_init.cpp  pna_target.cpp
src/arch/psa/: CMakeLists.txt
src/arch/psa/c_frontend/: psa_table_key_c.cpp
src/arch/tna/: CMakeLists.txt  tna_init.cpp  tna_target.cpp
src/c_frontend/: tdi_info_c.cpp  tdi_init_c.cpp  tdi_learn_c.cpp  tdi_session_c.cpp  tdi_state_c.cpp  tdi_state_c.hpp  tdi_table_attributes_c.cpp  tdi_table_c.cpp  tdi_table_data_c.cpp  tdi_table_info_c.cpp  tdi_table_key_c.cpp  tdi_table_notifications_c.cpp  tdi_table_operations_c.cpp
src/targets/dummy/: CMakeLists.txt  target_init.cpp  target_init.hpp  tdi_dummy_defs.h  tdi_dummy_info.cpp  tdi_dummy_info.hpp  tdi_dummy_init.cpp  tdi_dummy_init.hpp  tdi_dummy_table.hpp
src/targets/dummy/c_frontend/: target_init.h  target_init_c.cpp  tdi_dummy_init.h  tdi_dummy_init_c.cpp
src/tdi_json_parser/: CMakeLists.txt  tdi_cjson.cpp  tdi_context_info.hpp  tdi_info_parser.cpp  tdi_learn_info.cpp  tdi_table_info.cpp  tdi_table_info_internal.hpp
src/tdi_json_parser/tests/: CMakeLists.txt  README  main.cpp  tdi_info_test.cpp  tdi_info_test.hpp
src/tdi_json_parser/tests/tdi_json_files/dummy/shared/: tdi_ports.json
src/tdi_json_parser/tests/tdi_json_files/dummy/tna_counter/: tdi.json
src/tdi_json_parser/tests/tdi_json_files/dummy/tna_exact_match/: tdi.json
tdi_json_parser/: CMakeLists.txt  tdi_cjson.cpp  tdi_cjson.hpp  tdi_table_info.cpp  tdi_table_info.hpp
tdi_python/: tdiDefs.py  tdiInfo.py  tdiTable.py  tdiTableEntry.py  tdicli.py
